[package]
name = "test-harness"
version = "0.1.0"
authors = ["Mark Hakansson <mark.hakansson@live.se>"]
edition = "2018"

[dependencies]
cortex-m-rtic = "0.6.0-alpha.2"
embedded-hal = "0.2.4"
nb = "1.0.0"
panic-halt = "0.2.0"

[dependencies.cortex-m]
version = "0.7.1"

[dependencies.cortex-m-rt]
version = "0.6.11"

[dependencies.stm32f4xx-hal]
version = "0.8.3"
features = ["rt", "stm32f401"] # replace the model of your microcontroller here

[[bin]]
name = "test-harness"
test = false
bench = false

[dependencies.panic-klee]
git = "https://gitlab.henriktjader.com/pln/panic-klee.git"

[dependencies.klee-rs]
git = "https://github.com/markhakansson/klee-rs.git"
version = "0.1"
optional = true

[dependencies.vcell]
version = "0.1.3"
optional = true

[patch.crates-io]
cortex-m = { git = "https://github.com/markhakansson/cortex-m.git", branch = "klee" }
cortex-m-rt = { git = "https://github.com/markhakansson/cortex-m-rt.git", branch = "klee" }
#cortex-m-rtic = { git = "https://github.com/markhakansson/cortex-m-rtic.git", branch = "klee-mode" }
cortex-m-rtic = { path = "../cortex-m-rtic" }
vcell = { path = "../vcell" }

[features]
klee-analysis = [
    "klee-rs",
    "cortex-m/klee-analysis",
    "vcell/klee-analysis",
    "cortex-m-rtic/klee-analysis",
]
klee-replay = [
    "cortex-m-rtic/klee-replay",
    "vcell/klee-replay",
]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[profile.dev]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
