[package]
name = "test-harness"
version = "0.1.0"
authors = ["Mark Hakansson <mark.hakansson@live.se>"]
edition = "2018"

[dependencies]
cortex-m-rtic = "0.6.0-alpha.2"
embedded-hal = "0.2.4"
nb = "1.0.0"
panic-halt = "0.2.0"

[dependencies.cortex-m]
version = "0.7.1"

[dependencies.cortex-m-rt]
version = "0.6.11"

[dependencies.stm32f4xx-hal]
version = "0.9"
features = ["rt", "stm32f401"] # replace the model of your microcontroller here

[dependencies.dwt-systick-monotonic]
version = "0.1.0-alpha.0"

[[bin]]
name = "test-harness"
test = false
bench = false

[dependencies.panic-rauk]
git = "https://github.com/markhakansson/panic-rauk.git"
version = "0.1"
optional = true

[profile.dev]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = "thin" # better optimizations
